oxd_preda/transpiler/antlr_generated/crystality/CrystalityParser.cpp

// Generated from Crystality.g4 by ANTLR 4.12.0


#include "CrystalityListener.h"

#include "CrystalityParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct CrystalityParserStaticData final {
  CrystalityParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  CrystalityParserStaticData(const CrystalityParserStaticData&) = delete;
  CrystalityParserStaticData(CrystalityParserStaticData&&) = delete;
  CrystalityParserStaticData& operator=(const CrystalityParserStaticData&) = delete;
  CrystalityParserStaticData& operator=(CrystalityParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag crystalityParserOnceFlag;
CrystalityParserStaticData *crystalityParserStaticData = nullptr;

void crystalityParserInitialize() {
  assert(crystalityParserStaticData == nullptr);
  auto staticData = std::make_unique<CrystalityParserStaticData>(
    std::vector<std::string>{
      "sourceUnit", "pragmaDirective", "pragmaName", "pragmaValue", "version", 
      "versionOperator", "versionConstraint", "importDeclaration", "importDirective", 
      "natSpec", "contractDefinition", "inheritanceSpecifier", "contractPart", 
      "stateVariableDeclaration", "usingForDeclaration", "structDefinition", 
      "constructorDefinition", "modifierDefinition", "modifierInvocation", 
      "functionDefinition", "functionDescriptor", "returnParameters", "modifierList", 
      "overrideSpecifier", "accessiblity", "eventDefinition", "enumValue", 
      "enumDefinition", "parameterList", "parameter", "eventParameterList", 
      "eventParameter", "functionTypeParameterList", "functionTypeParameter", 
      "variableDeclaration", "typeName", "userDefinedTypeName", "mapping", 
      "functionTypeName", "storageLocation", "stateMutability", "block", 
      "statement", "expressionStatement", "ifStatement", "ifWithBlock", 
      "elseWithBlock", "elseIfWithBlock", "whileStatement", "forStatement", 
      "inlineAssemblyStatement", "doWhileStatement", "continueStatement", 
      "breakStatement", "returnStatement", "throwStatement", "emitStatement", 
      "relayStatement", "relayLambdaDefinition", "relayLambdaParameter", 
      "relayScope", "variableDeclarationStatement", "localVariableDeclaration", 
      "variableDeclarationList", "moreVariableDeclaration", "identifierList", 
      "moreIdentifier", "elementaryTypeName", "expression", "postOperator", 
      "preOperator", "midOperator", "primaryExpression", "matchedParentheses", 
      "expressionList", "nameValueList", "nameValue", "functionCallArguments", 
      "functionCall", "assemblyBlock", "assemblyItem", "assemblyExpression", 
      "assemblyCall", "assemblyLocalDefinition", "assemblyAssignment", "assemblyIdentifierOrList", 
      "assemblyIdentifierList", "assemblyStackAssignment", "labelDefinition", 
      "assemblySwitch", "assemblyCase", "assemblyFunctionDefinition", "assemblyFunctionReturns", 
      "assemblyFor", "assemblyIf", "assemblyLiteral", "subAssembly", "tupleExpression", 
      "bracketTupleExpression", "moreExpression", "paranthesesTupleExpression", 
      "typeNameExpression", "numberLiteral", "identifier", "scope", "accessSpecifier"
    },
    std::vector<std::string>{
      "", "'pragma'", "';'", "'^'", "'~'", "'>='", "'>'", "'<'", "'<='", 
      "'='", "'as'", "'import'", "'*'", "'from'", "'{'", "','", "'}'", "'contract'", 
      "'interface'", "'library'", "'is'", "'('", "')'", "'using'", "'for'", 
      "'struct'", "'modifier'", "'function'", "'returns'", "'event'", "'enum'", 
      "'['", "']'", "'address'", "'.'", "'mapping'", "'=>'", "'memory'", 
      "'storage'", "'calldata'", "'if'", "'else'", "'while'", "'assembly'", 
      "'do'", "'return'", "'throw'", "'emit'", "'var'", "'@'", "'global'", 
      "'locals'", "'bool'", "'string'", "'byte'", "'new'", "'\\u003F'", 
      "':'", "'++'", "'--'", "'+'", "'-'", "'!'", "'after'", "'delete'", 
      "'**'", "'/'", "'%'", "'<<'", "'>>'", "'&'", "'|'", "'=='", "'!='", 
      "'&&'", "'||'", "'|='", "'^='", "'&='", "'<<='", "'>>='", "'+='", 
      "'-='", "'*='", "'/='", "'%='", "'let'", "':='", "'=:'", "'switch'", 
      "'case'", "'default'", "'->'", "'local'", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'anonymous'", "'break'", "'constant'", 
      "'continue'", "'external'", "'indexed'", "'internal'", "'payable'", 
      "'private'", "'public'", "'pure'", "'type'", "'view'", "'relay'", 
      "'constructor'", "'override'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "NatSpecSingleLine", "NatSpecMultiLine", 
      "VersionLiteral", "BooleanLiteral", "DecimalNumber", "HexNumber", 
      "Int", "Uint", "Byte", "Fixed", "Ufixed", "NumberUnit", "HexLiteral", 
      "ReservedKeyword", "AnonymousKeyword", "BreakKeyword", "ConstantKeyword", 
      "ContinueKeyword", "ExternalKeyword", "IndexedKeyword", "InternalKeyword", 
      "PayableKeyword", "PrivateKeyword", "PublicKeyword", "PureKeyword", 
      "TypeKeyword", "ViewKeyword", "RelayKeyword", "ConstructorKeyword", 
      "OverrideKeyword", "Identifier", "StringLiteral", "WS", "COMMENT", 
      "LINE_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  crystalityParserStaticData = staticData.release();
}

}

CrystalityParser::CrystalityParser(TokenStream *input) : CrystalityParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

CrystalityParser::CrystalityParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  CrystalityParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *crystalityParserStaticData->atn, crystalityParserStaticData->decisionToDFA, crystalityParserStaticData->sharedContextCache, options);
}

CrystalityParser::~CrystalityParser() {
  delete _interpreter;
}

const atn::ATN& CrystalityParser::getATN() const {
  return *crystalityParserStaticData->atn;
}

std::string CrystalityParser::getGrammarFileName() const {
  return "Crystality.g4";
}

const std::vector<std::string>& CrystalityParser::getRuleNames() const {
  return crystalityParserStaticData->ruleNames;
}

const dfa::Vocabulary& CrystalityParser::getVocabulary() const {
  return crystalityParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView CrystalityParser::getSerializedATN() const {
  return crystalityParserStaticData->serializedATN;
}


//----------------- SourceUnitContext ------------------------------------------------------------------

CrystalityParser::SourceUnitContext::SourceUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* CrystalityParser::SourceUnitContext::EOF() {
  return getToken(CrystalityParser::EOF, 0);
}

std::vector<CrystalityParser::PragmaDirectiveContext *> CrystalityParser::SourceUnitContext::pragmaDirective() {
  return getRuleContexts<CrystalityParser::PragmaDirectiveContext>();
}

CrystalityParser::PragmaDirectiveContext* CrystalityParser::SourceUnitContext::pragmaDirective(size_t i) {
  return getRuleContext<CrystalityParser::PragmaDirectiveContext>(i);
}

std::vector<CrystalityParser::ImportDirectiveContext *> CrystalityParser::SourceUnitContext::importDirective() {
  return getRuleContexts<CrystalityParser::ImportDirectiveContext>();
}

CrystalityParser::ImportDirectiveContext* CrystalityParser::SourceUnitContext::importDirective(size_t i) {
  return getRuleContext<CrystalityParser::ImportDirectiveContext>(i);
}

std::vector<CrystalityParser::ContractDefinitionContext *> CrystalityParser::SourceUnitContext::contractDefinition() {
  return getRuleContexts<CrystalityParser::ContractDefinitionContext>();
}

CrystalityParser::ContractDefinitionContext* CrystalityParser::SourceUnitContext::contractDefinition(size_t i) {
  return getRuleContext<CrystalityParser::ContractDefinitionContext>(i);
}


size_t CrystalityParser::SourceUnitContext::getRuleIndex() const {
  return CrystalityParser::RuleSourceUnit;
}

void CrystalityParser::SourceUnitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceUnit(this);
}

void CrystalityParser::SourceUnitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceUnit(this);
}

CrystalityParser::SourceUnitContext* CrystalityParser::sourceUnit() {
  SourceUnitContext *_localctx = _tracker.createInstance<SourceUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, CrystalityParser::RuleSourceUnit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(217);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 919554) != 0) || _la == CrystalityParser::NatSpecSingleLine

    || _la == CrystalityParser::NatSpecMultiLine) {
      setState(215);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case CrystalityParser::T__0: {
          setState(212);
          pragmaDirective();
          break;
        }

        case CrystalityParser::T__10: {
          setState(213);
          importDirective();
          break;
        }

        case CrystalityParser::T__16:
        case CrystalityParser::T__17:
        case CrystalityParser::T__18:
        case CrystalityParser::NatSpecSingleLine:
        case CrystalityParser::NatSpecMultiLine: {
          setState(214);
          contractDefinition();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(219);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(220);
    match(CrystalityParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaDirectiveContext ------------------------------------------------------------------

CrystalityParser::PragmaDirectiveContext::PragmaDirectiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrystalityParser::PragmaNameContext* CrystalityParser::PragmaDirectiveContext::pragmaName() {
  return getRuleContext<CrystalityParser::PragmaNameContext>(0);
}

CrystalityParser::PragmaValueContext* CrystalityParser::PragmaDirectiveContext::pragmaValue() {
  return getRuleContext<CrystalityParser::PragmaValueContext>(0);
}


size_t CrystalityParser::PragmaDirectiveContext::getRuleIndex() const {
  return CrystalityParser::RulePragmaDirective;
}

void CrystalityParser::PragmaDirectiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaDirective(this);
}

void CrystalityParser::PragmaDirectiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaDirective(this);
}

CrystalityParser::PragmaDirectiveContext* CrystalityParser::pragmaDirective() {
  PragmaDirectiveContext *_localctx = _tracker.createInstance<PragmaDirectiveContext>(_ctx, getState());
  enterRule(_localctx, 2, CrystalityParser::RulePragmaDirective);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(222);
    match(CrystalityParser::T__0);
    setState(223);
    pragmaName();
    setState(224);
    pragmaValue();
    setState(225);
    match(CrystalityParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaNameContext ------------------------------------------------------------------

CrystalityParser::PragmaNameContext::PragmaNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrystalityParser::IdentifierContext* CrystalityParser::PragmaNameContext::identifier() {
  return getRuleContext<CrystalityParser::IdentifierContext>(0);
}


size_t CrystalityParser::PragmaNameContext::getRuleIndex() const {
  return CrystalityParser::RulePragmaName;
}

void CrystalityParser::PragmaNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaName(this);
}

void CrystalityParser::PragmaNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaName(this);
}

CrystalityParser::PragmaNameContext* CrystalityParser::pragmaName() {
  PragmaNameContext *_localctx = _tracker.createInstance<PragmaNameContext>(_ctx, getState());
  enterRule(_localctx, 4, CrystalityParser::RulePragmaName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(227);
    identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaValueContext ------------------------------------------------------------------

CrystalityParser::PragmaValueContext::PragmaValueContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

CrystalityParser::VersionContext* CrystalityParser::PragmaValueContext::version() {
  return getRuleContext<CrystalityParser::VersionContext>(0);
}

CrystalityParser::ExpressionContext* CrystalityParser::PragmaValueContext::expression() {
  return getRuleContext<CrystalityParser::ExpressionContext>(0);
}


size_t CrystalityParser::PragmaValueContext::getRuleIndex() const {
  return CrystalityParser::RulePragmaValue;
}

void CrystalityParser::PragmaValueContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaValue(this);
}

void CrystalityParser::PragmaValueContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaValue(this);
}

CrystalityParser::PragmaValueContext* CrystalityParser::pragmaValue() {
  PragmaValueContext *_localctx = _tracker.createInstance<PragmaValueContext>(_ctx, getState());
  enterRule(_localctx, 6, CrystalityParser::RulePragmaValue);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(231);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(229);
      version();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(230);
      expression(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VersionContext ------------------------------------------------------------------

CrystalityParser::VersionContext::VersionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<CrystalityParser::VersionConstraintContext *> CrystalityParser::VersionContext::versionConstraint() {
  return getRuleContexts<CrystalityParser::VersionConstraintContext>();
}

CrystalityParser::VersionConstraintContext* CrystalityParser::VersionContext::versionConstraint(size_t i) {
  return getRuleContext<CrystalityParser::VersionConstraintContext>(i);
}


size_t CrystalityParser::VersionContext::getRuleIndex() const {
  return CrystalityParser::RuleVersion;
}

void CrystalityParser::VersionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVersion(this);
}

void CrystalityParser::VersionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<CrystalityListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVersion(this);
}

CrystalityParser::VersionContext* CrystalityParser::version() {
  VersionContext *_localctx = _tracker.createInstance<VersionContext>(_ctx, getState());
  enterRule(_localctx, 8, CrystalityParser::RuleVersion);
  size_t _la = 0;
